feat: add desktop hero w/out some hovers and refactor webpack-config

--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,40 @@
 <body>
     <header class="header">
         <img src="assets/img/logo.svg" alt="FIX РЕМОНТ" class="header__logo">
-        <a href="#" class="header__tel">
-            <img src="assets/img/tel-icon.svg" alt="tel" class="header__tel-icon">
+        <a href="#footer" class="header__tel">
+            <img src="assets/img/tel-icon.svg" alt="Контакты" class="header__tel-icon">
             Контакты
         </a>
     </header>
     <section class="hero">
-        <div class="hero__content"></div>
-        <div class="hero__video"></div>
+        <div class="hero__content">
+            <h1 class="page-title">
+                Ремонт квартир <br> в типовых домах
+            </h1>
+            <div class="hero__description">
+                Готовый дизайн-проект, работы и материалы за 3 месяца от 610 т.р.
+            </div>
+            <div class="hero__info">
+                <a href="#feedback" class="button">
+                    Узнайте о запуске первым
+                </a>
+                <div class="hero__info-text">
+                    Старт весной 2016
+                </div>
+            </div>
+            <a href="#promo" class="hero__anchor">
+                <img src="assets/img/arrows.svg" alt="Вниз" class="hero__anchor-icon">
+                Листайте вниз, <br>
+                чтобы ничего не упустить
+            </a>
+        </div>
+        <div class="hero__video">
+            <img src="assets/img/hero-video.jpg" alt="Видео" class="hero__video-preview">
+            <button type="button" class="hero__play">
+                <img src="assets/img/play.svg" alt="Воспроизвести" class="hero__play-icon">
+                Смотреть видео
+            </button>
+        </div>
     </section>
 </body>
 
