feat: add container

--- a/src/index.html
+++ b/src/index.html
@@ -47,43 +47,45 @@
         </div>
     </section>
     <section class="promo" id="promo">
-        <h2 class="block-title">
-            FIX Ремонт — это легко
-        </h2>
-        <div class="block-subtitle">
-            Готовые проекты, проверенные материалы и умелые руки
-        </div>
-        <div class="promo__wrapper">
-            <div class="promo__item">
-                <div class="promo__title">
-                    Опытная команда
-                </div>
-                <div class="promo__text">
-                    Команда проектировщиков и строителей со стажем работы более 6 лет
-                </div>
+        <div class="container">
+            <h2 class="block-title">
+                FIX Ремонт — это легко
+            </h2>
+            <div class="block-subtitle">
+                Готовые проекты, проверенные материалы и умелые руки
             </div>
-            <div class="promo__item">
-                <div class="promo__title">
-                    Типовые дизайн-проекты
+            <div class="promo__wrapper">
+                <div class="promo__item">
+                    <div class="promo__title">
+                        Опытная команда
+                    </div>
+                    <div class="promo__text">
+                        Команда проектировщиков и строителей со стажем работы более 6 лет
+                    </div>
                 </div>
-                <div class="promo__text">
-                    Три стиля чистовой отделки «под ключ» и спектр дополнительных услуг
+                <div class="promo__item">
+                    <div class="promo__title">
+                        Типовые дизайн-проекты
+                    </div>
+                    <div class="promo__text">
+                        Три стиля чистовой отделки «под ключ» и спектр дополнительных услуг
+                    </div>
                 </div>
-            </div>
-            <div class="promo__item">
-                <div class="promo__title">
-                    Фиксированная смета
+                <div class="promo__item">
+                    <div class="promo__title">
+                        Фиксированная смета
+                    </div>
+                    <div class="promo__text">
+                        Никаких дополнительных расходов во время ремонта. Расчет стоимости при заключении договора
+                    </div>
                 </div>
-                <div class="promo__text">
-                    Никаких дополнительных расходов во время ремонта. Расчет стоимости при заключении договора
-                </div>
-            </div>
-            <div class="promo__item promo__item--big">
-                <div class="promo__title">
-                    Срок работ
-                </div>
-                <div class="promo__text">
-                    3 месяца
+                <div class="promo__item promo__item--big">
+                    <div class="promo__title">
+                        Срок работ
+                    </div>
+                    <div class="promo__text">
+                        3 месяца
+                    </div>
                 </div>
             </div>
         </div>
