--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test-task</title>
 </head>
-
 <body>
     <header class="header">
         <img src="assets/img/logo.svg" alt="FIX РЕМОНТ" class="header__logo">
@@ -90,6 +88,54 @@
             </div>
         </div>
     </section>
-</body>
 
+    <footer class="footer" id="footer">
+        <div class="footer__nav">
+            <a href="#" class="footer__nav-item">
+                <img src="assets/img/fb.svg" alt="Facebook" class="footer__nav-icon">
+            </a>
+            <a href="#" class="footer__nav-item">
+                <img src="assets/img/vk.svg" alt="Vkontakte" class="footer__nav-icon">
+            </a>
+            <a href="#" class="footer__nav-item">
+                <img src="assets/img/ig.svg" alt="Instagram" class="footer__nav-icon">
+            </a>
+        </div>
+        <div class="footer__title">
+            Следите за нашим развитием
+        </div>
+        <div class="footer__text">
+            Подпишитесь на наши аккаунты в соц. сетях, знакомьтесь с нашими проектами и тем, что нас вдохновляет
+        </div>
+        <div class="footer__contacts">
+            <div class="footer__contacts-item">
+                <a href="tel:+78129035445" class="footer__contacts-link">
+                    <img src="assets/img/tel-icon.svg" alt="Номер телефона">
+                    <span class="footer__contacts-link-text">
+                        +7 (812) 903-54-45
+                    </span>
+                </a>
+            </div>
+            <div class="footer__contacts-item">
+                <div class="footer__title">
+                    Ул. Галерная, д 55,
+                </div>
+                <div class="footer__text">
+                    Санкт-Петербург
+                </div>
+            </div>
+            <div class="footer__contacts-item">
+                <a href="#" class="footer__contacts-link footer__contacts-link--email">
+                    <img src="assets/img/email-icon.svg" alt="Электронная почта">
+                    <span class="footer__contacts-link-text">
+                        9035445@gmail.com
+                    </span>
+                </a>
+            </div>
+        </div>
+        <div class="footer__copyright">
+            &copy; FIX Ремонт, 2016
+        </div>
+    </footer>
+</body>
 </html>
