feat: add adaptive slider

--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,52 @@
             </div>
         </div>
     </section>
-
+    <section class="splide slider">
+        <div class="container">
+            <h2 class="block-title">
+                3 стиля интерьера
+            </h2>
+            <div class="block-subtitle">
+                Скандинавский, классический и эко-стиль
+            </div>
+        </div>
+        <div class="splide__arrows slider__arrows">
+            <button type="button" class="splide__arrow splide__arrow--prev slider__arrow slider__arrow-prev">
+                <img src="assets/img/prev.svg" alt="Назад" class="slider__arrow-icon">
+            </button>
+            <button type="button" class="splide__arrow splide__arrow--next slider__arrow slider__arrow-next">
+                <img src="assets/img/next.svg" alt="Вперёд" class="slider__arrow-icon">
+            </button>
+        </div>
+        <div class="splide__track slider__wrapper">
+            <ul class="splide__list">
+                <li class="splide__slide">
+                    <div class="slider__slide">
+                        <img src="assets/img/slider-1.jpg" alt="Изображение 1" class="slider__img">
+                        <div class="slider__text">
+                            Кафельная плитка в ванной комнате в скандинавском стиле
+                        </div>
+                    </div>
+                </li>
+                <li class="splide__slide">
+                    <div class="slider__slide">
+                        <img src="assets/img/slider-1.jpg" alt="Изображение 2" class="slider__img">
+                        <div class="slider__text">
+                            Кафельная плитка в ванной комнате в скандинавском стиле
+                        </div>
+                    </div>
+                </li>
+                <li class="splide__slide">
+                    <div class="slider__slide">
+                        <img src="assets/img/slider-1.jpg" alt="Изображение 3" class="slider__img">
+                        <div class="slider__text">
+                            Кафельная плитка в ванной комнате в скандинавском стиле
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
     <section class="feedback" id="feedback">
         <div class="container">
             <div class="feedback__wrapper">
@@ -105,11 +150,13 @@
                     <form action="#" class="feedback__form" id="feedback-form">
                         <div class="feedback__elements">
                             <div class="form-element">
-                                <input type="text" class="form-element__input" id="feedback-name" placeholder="Имя и фамилия" required>
+                                <input type="text" class="form-element__input" id="feedback-name"
+                                    placeholder="Имя и фамилия" required>
                                 <label for="feedback-name" class="form-element__label">Имя и фамилия*</label>
                             </div>
                             <div class="form-element">
-                                <input type="email" class="form-element__input" id="feedback-email" placeholder="Е-mail адрес" required>
+                                <input type="email" class="form-element__input" id="feedback-email"
+                                    placeholder="Е-mail адрес" required>
                                 <label for="feedback-email" class="form-element__label">Е-mail адрес*</label>
                             </div>
                             <div class="form-element">
